cm4all-workshop (7.4) unstable; urgency=low

  * cron: implement stickiness
  * sql: add index on "jobs.time_modified"

 --   

cm4all-workshop (7.3) unstable; urgency=low

  * workshop: add plan option "notify_progress"
  * workshop: add column "jobs.time_modified"
  * pond: discard lines with a null byte

 -- Max Kellermann <mk@cm4all.com>  Fri, 05 Dec 2025 13:36:48 +0100

cm4all-workshop (7.2) unstable; urgency=low

  * workshop: disable plan UID check for "translate" plans
  * workshop: implement TERMINATE_CHILDREN for "translate" and "spawn"
  * cron: support multiple CHILD_TAGs for TERMINATE_CHILDREN
  * control: allow enabling/disabling Workshop partitions by name
  * control: add packet CANCEL_JOB

 -- Max Kellermann <mk@cm4all.com>  Thu, 30 Oct 2025 20:27:19 +0100

cm4all-workshop (7.1) unstable; urgency=low

  * workshop: disable progress pipe if "translate" is enabled
  * workshop: read remaining output after job process exits
  * workshop: add "stdin" column
  * prepare SQL statements

 -- Max Kellermann <mk@cm4all.com>  Wed, 29 Oct 2025 09:29:20 +0100

cm4all-workshop (7.0) unstable; urgency=low

  * workshop: fix use-after-free bug in "${0}" expansion
  * workshop: report spawner errors
  * workshop: implement plan option "translate"
  * no delay for first PostgreSQL auto-reconnect

 -- Max Kellermann <mk@cm4all.com>  Tue, 28 Oct 2025 12:07:14 +0100

cm4all-workshop (6.13) unstable; urgency=low

  * translation: add packet ALLOW_PTRACE
  * cron: allow multipliers for "@hourly"
  * sql: add index on "cronresults.finished" for pruning old rows

 -- Max Kellermann <mk@cm4all.com>  Mon, 29 Sep 2025 12:40:05 +0200

cm4all-workshop (6.12) unstable; urgency=low

  * spawn: disable the PID namespace for the spawner process
  * spawn: reassociate with existing user/IPC namespace (experimental)
  * spawn: hold a namespace lease

 -- Max Kellermann <mk@cm4all.com>  Wed, 10 Sep 2025 09:00:31 +0200

cm4all-workshop (6.11) unstable; urgency=low
