@@ -2,6 +2,7 @@ cm4all-workshop (7.4) unstable; urgency=low
 
   * cron: implement stickiness
   * sql: add index on "jobs.time_modified"
+  * sql: add column "jobs.account_id"
 
  --   
 
